# AM1Reparm2

./: CMakeLists.txt  analysis.py  report.aux  report.tex  schedule.txt
.ropeproject/: globalnames  objectdb
FuranExample/: .FuranAM1.com.swp  .FuranAM1.log.swp  .FuranAM1_0P2.com.swp  Furan.out  FuranAM1.com  FuranAM1Best0.com  FuranAM1Best1.com  FuranAM1Best100.com  FuranAM1Best110.com  FuranAM1Best120.com  FuranAM1Best130.com  FuranAM1Best131.com  FuranAM1Best136.com  FuranAM1Best14.com  FuranAM1Best141.com  FuranAM1Best144.com  FuranAM1Best146.com  FuranAM1Best153.com  FuranAM1Best161.com  FuranAM1Best166.com  FuranAM1Best169.com  FuranAM1Best18.com  FuranAM1Best182.com  FuranAM1Best19.com  FuranAM1Best191.com  FuranAM1Best199.com  FuranAM1Best2.com  FuranAM1Best3.com  FuranAM1Best31.com  FuranAM1Best35.com  FuranAM1Best4.com  FuranAM1Best41.com  FuranAM1Best42.com  FuranAM1Best5.com  FuranAM1Best51.com  FuranAM1Best58.com  FuranAM1Best59.com  FuranAM1Best6.com  FuranAM1Best67.com  FuranAM1Best68.com  (+1400 more)
FuranExample_0/: Furan  Furan.out
FuranExample_100/: Furan.out  FuranAM1Best0.com  FuranAM1Best1.com  FuranAM1Best11.com  FuranAM1Best12.com  FuranAM1Best15.com  FuranAM1Best2.com  FuranAM1Best20.com  FuranAM1Best21.com  FuranAM1Best23.com  FuranAM1Best25.com  FuranAM1Best26.com  FuranAM1Best27.com  FuranAM1Best28.com  FuranAM1Best3.com  FuranAM1Best30.com  FuranAM1Best35.com  FuranAM1Best38.com  FuranAM1Best4.com  FuranAM1Best41.com  FuranAM1Best42.com  FuranAM1Best43.com  FuranAM1Best45.com  FuranAM1Best46.com  FuranAM1Best47.com  FuranAM1Best48.com  (+30 more)
src/: AM1gen.h  (+12 more)
(+331 files in other folders)
